@@ -1,5 +1,5 @@
 /*
- * Copyright 2010 the original author or authors.
+ * Copyright 2011 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -13,24 +13,14 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+package org.gradle.integtests.fixtures
 
-apply from: "$rootDir/gradle/integTest.gradle"
-
-dependencies {
-    compile project(':core')
-    compile project(':openApi')
-
-    groovy libraries.groovy_depends
-
-    compile libraries.dom4j,
-            libraries.commons_io,
-            libraries.slf4j_api
-
-    runtime libraries.jaxen
-
-    testCompile project(":testing")
-}
-
-test {
-    jvmArgs '-Xms128m', '-Xmx256m', '-XX:MaxPermSize=128m', '-XX:+HeapDumpOnOutOfMemoryError'
+class TestContext {
+    
+    GradleDistribution distribution
+    GradleDistributionExecuter executor
+    
+    TestContext() {
+        this(new GradleDistribution(), new GradleDistributionExecuter())
+    }
 }
